--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -2,9 +2,9 @@
 
 <PageTitle>Index</PageTitle>
 
-<h1>Fusioncharts ! Integration with Blazor</h1>
+<h1>Fusioncharts ! Integration with Blazor v1</h1>
 
-Welcome to your new app. 
+  
 JavaScript charts for web and mobile apps
 
-<SurveyPrompt Title="How is Blazor working for you?" />
+<SurveyPrompt Title="How is Blazor working for you?" /> 
